# agent-doc-board

./: README.md  pyproject.toml
agent_doc_board/: __init__.py  __main__.py  cli.py  config.py  scanner.py  server.py
docs/plans/: 2026-05-13-element-annotation-comments-design.md  2026-05-13-element-annotation-comments-implementation.md
