[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-doc-board"
version = "0.1.0"
description = "Local markdown documentation board for agent-managed projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-doc-board = "agent_doc_board.cli:main"

[tool.setuptools.package-data]
agent_doc_board = ["static/katex/*"]
